--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
   color: #A64208;
   margin-top: 4rem; }
 
-button, .card__product a, .form__btn button {
+button, .card__product a, .register button, .form__btn button {
   font-family: 'Alegreya', serif;
   font-size: 1.2rem;
   background-color: #BF6E50;
@@ -47,37 +47,40 @@ header {
   z-index: 10;
   background: linear-gradient(90deg, #bf6e50 60%, #ba6f6f 100%); }
 
-.navbar {
-  font-size: 1.5rem;
-  display: grid;
-  grid-template-columns: 1fr 3fr; }
-  .navbar__menu {
-    display: flex; }
-    .navbar__menu-dropdown ul {
-      color: white;
-      background-color: #BF6E50; }
-    .navbar__menu-title {
-      font-size: 3.5rem;
-      color: white;
-      padding-left: 1.5rem;
-      text-decoration: none; }
-      .navbar__menu-title:hover {
-        color: white; }
-  .navbar__pages {
+.navbar__menu {
+  display: flex; }
+  .navbar__menu-dropdown img {
+    margin-top: 0.5rem;
+    width: 4.5rem;
+    height: 4.5rem;
+    margin-left: 1rem; }
+  .navbar__menu-dropdown ul {
+    color: white;
+    background-color: #BF6E50; }
+  .navbar__menu-title {
+    font-size: 3.5rem;
+    color: white;
+    padding-left: 1.5rem;
+    text-decoration: none; }
+    .navbar__menu-title:hover {
+      color: white; }
+
+.navbar__pages {
+  display: flex;
+  align-items: flex-end;
+  justify-content: end;
+  font-size: 1.5rem; }
+  .navbar__pages ul {
     display: flex;
-    justify-content: end; }
-    .navbar__pages ul {
-      display: flex;
-      gap: 2rem;
-      padding-top: 1.5rem; }
-      .navbar__pages ul li a {
-        text-decoration: none;
-        color: white;
-        font-family: "Fjalla One", sans-serif;
-        transition: all 0.3s; }
-        .navbar__pages ul li a:hover {
-          border-bottom: 2px white solid; }
-  .navbar__buy img {
+    gap: 2rem; }
+    .navbar__pages ul li a {
+      text-decoration: none;
+      color: white;
+      font-family: "Fjalla One", sans-serif;
+      transition: all 0.3s; }
+      .navbar__pages ul li a:hover {
+        border-bottom: 2px white solid; }
+  .navbar__pages-buy img {
     width: 3rem;
     height: 3rem;
     margin: 1rem; }
@@ -101,7 +104,6 @@ main {
 
 .carousel {
   margin: 4rem auto;
-  display: flex;
   width: 35rem; }
   .carousel-item {
     width: 100%;
@@ -220,7 +222,7 @@ main {
       text-align: justify;
       line-height: 1.5;
       margin-top: 20rem;
-      padding: 0 1rem; }
+      padding: 0 5rem; }
 
 .form {
   background: linear-gradient(180deg, #bf6e50 60%, #ba6f6f 100%);
@@ -263,43 +265,32 @@ main {
 @media screen and (max-width: 785px) {
   .navbar__pages ul {
     display: none; }
-  .navbar__buy {
-    margin-bottom: 2rem; } }
+  .navbar__pages-buy {
+    margin-bottom: 2.3rem; } }
 
 @media screen and (max-width: 1024px) {
   .banner {
     height: 25rem; }
-  .banner img {
-    height: 100%; } }
+    .banner img {
+      height: 100%; } }
 
 @media screen and (max-width: 930px) {
   .banner {
     height: 20rem; }
-  .banner img {
-    height: 100%; }
-  .banner h1 {
-    font-size: 3rem; } }
+    .banner h1 {
+      font-size: 3rem; } }
 
 @media screen and (max-width: 768px) {
   .banner {
     display: inline-block;
-    margin-bottom: 10rem; }
-  .banner img {
-    display: inline-block;
-    width: 100%; }
-  .banner h1 {
-    width: 100%;
-    display: inline-block; } }
-
-@media screen and (max-width: 700px) {
-  .banner {
-    margin-bottom: 13rem; }
-  .banner img {
-    height: 25rem; } }
-
-@media screen and (max-width: 500px) {
-  .banner img {
-    height: 20rem; } }
+    margin-bottom: 8rem; }
+    .banner img {
+      width: 100%; }
+    .banner h1 {
+      width: 100%;
+      display: inline-flex;
+      justify-content: center;
+      padding-top: 1.5rem; } }
 
 @media screen and (max-width: 375px) {
   .banner img {
@@ -308,8 +299,8 @@ main {
 @media screen and (max-width: 570px) {
   .carousel {
     width: 100%; }
-  .carousel-item {
-    height: 35rem; } }
+    .carousel-item {
+      height: 35rem; } }
 
 @media screen and (max-width: 500px) {
   .carousel-item {
@@ -322,6 +313,16 @@ main {
 @media screen and (max-width: 320px) {
   .carousel-item {
     height: 20rem; } }
+
+@media screen and (max-width: 600px) {
+  .subtitle__principal {
+    font-size: 1.5rem; } }
+
+@media screen and (max-width: 425px) {
+  .subtitle__principal {
+    font-size: 1rem; }
+  .subtitle__secundario, .us__container-sub {
+    font-size: 1.5rem; } }
 
 @media screen and (max-width: 1042px) {
   .card {
@@ -345,75 +346,58 @@ main {
     height: 18rem;
     width: 90%; } }
 
-@media screen and (max-width: 600px) {
-  .subtitle__principal {
-    font-size: 1.5rem; } }
-
-@media screen and (max-width: 425px) {
-  .subtitle__principal {
-    font-size: 1rem; }
-  .subtitle__secundario, .us__container-sub {
-    font-size: 1.5rem; } }
-
-@media screen and (max-width: 805px) {
-  .us__container {
-    height: 30rem; }
-  .us__container-description {
-    font-size: 1.3rem;
-    margin-top: 12rem; } }
-
-@media screen and (max-width: 660px) {
-  .us__container-description {
-    margin-top: 7rem; } }
-
-@media screen and (max-width: 500px) {
-  .us__container-description {
-    font-size: 1rem; } }
-
-@media screen and (max-width: 425px) {
-  .us__container {
-    height: 25rem; } }
-
-@media screen and (max-width: 375px) {
-  .us__container-description {
-    margin-top: 3rem; } }
-
-@media screen and (max-width: 425px) {
-  .description {
-    font-size: 1.2rem; }
-  .footer__grid {
-    grid-template-columns: 2fr; }
-  .footer__grid-paid {
-    margin-top: 1.5rem; } }
-
-@media screen and (max-width: 705px) {
-  .register button, .register .card__product a, .card__product .register a {
+@media screen and (max-width: 708px) {
+  .register .card__product a, .card__product .register a, .register button {
     margin-left: 1.5rem; } }
 
 @media screen and (max-width: 645px) {
   .register input {
     margin-left: 1.5rem; }
-  .register button, .register .card__product a, .card__product .register a {
-    margin-left: 0; }
-  .form {
-    width: 25rem; } }
+  .register .card__product a, .card__product .register a, .register button {
+    margin-left: 0;
+    font-size: 1rem; } }
 
 @media screen and (max-width: 441px) {
   .register label {
-    font-size: 0.8rem; }
-  .register button, .register .card__product a, .card__product .register a {
-    height: 2rem;
-    width: 3rem;
-    font-size: 0.7rem; } }
+    font-size: 0.8rem; } }
 
 @media screen and (max-width: 359px) {
   .register label {
     font-size: 0.7rem; } }
 
-@media screen and (max-width: 440px) {
+@media screen and (max-width: 924px) {
+  .us__container-description {
+    font-size: 1.3rem; } }
+
+@media screen and (max-width: 690px) {
+  .us__container {
+    height: 30rem; }
+    .us__container-description {
+      margin-top: 12rem;
+      font-size: 1rem;
+      padding: 0 3rem; } }
+
+@media screen and (max-width: 475px) {
+  .us__container {
+    height: 25rem; }
+    .us__container-description {
+      margin-top: 5rem; } }
+
+@media screen and (max-width: 375px) {
+  .us__container-description {
+    margin-top: 3rem;
+    padding: 0 1rem; } }
+
+@media screen and (max-width: 645px) {
   .form {
-    width: 18rem; } }
+    width: 25rem; } }
 
 @media screen and (max-width: 440px) {
-  .form__fieldset label {
-    display: flex; } }
+  .form {
+    width: 16rem; } }
+
+@media screen and (max-width: 425px) {
+  .footer__grid {
+    grid-template-columns: 2fr; }
+    .footer__grid-paid {
+      margin-top: 1.5rem; } }
