--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -23,7 +23,6 @@ main {
 
 .carousel {
     margin: 4rem auto;
-    display: flex;
     width: 35rem;
 
     &-item {
@@ -104,5 +103,9 @@ main {
         border: 2px solid black;
         width: 200px;
         height: 1.5rem;
+    }
+
+    & button {
+        @extend button;
     }
 }
