--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -10,5 +10,5 @@
     {{/each}}
 </div>
 
-<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="js/funciones.js"></script>
+{{!-- <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="js/funciones.js"></script> --}}
