Formuario de Login

--- a/src/views/carts.handlebars
+++ b/src/views/carts.handlebars
@@ -26,5 +26,5 @@
        <button class="btn__carrito" id="btn_compra">COMPRAR</button>
        <button class="btn__carrito" id="btn_vaciar">VACIAR CARRITO</button></a> 
     
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="../js/carrito.js"></script>
+    {{!-- <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../js/carrito.js"></script> --}}
