Autorizacion de inicio de sesion con github

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -5,5 +5,8 @@
     <input type="submit" value="INGRESAR">
 </form>
 
+<h2>INGRESAR CON TU CUENTA DE GITHUB</h2>
+<button onclick="location.href='/users/registroGithub'">GITHUB</button>
+
 <h2>¿NO ESTAS REGISTRADO?</h2>
 <button onclick="location.href='/registro'">Ir a Registro</button>
