Agregar carrito a usuario

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -8,5 +8,8 @@
 <h2>INGRESAR CON TU CUENTA DE GITHUB</h2>
 <button onclick="location.href='/users/registroGithub'">GITHUB</button>
 
+<h2>INGRESA CON TU CUENTA DE GMAIL</h2>
+<button onclick="location.href='/users/registroGoogle'">GMAIL</button>
+
 <h2>¿NO ESTAS REGISTRADO?</h2>
 <button onclick="location.href='/registro'">Ir a Registro</button>
