Funcionamiento del carrito y generacion de ticket desde api

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,15 +1,15 @@
 <h1>LOG IN</h1>
-<form action="/users/login" method="post">
+<form action="/login" method="post">
     <input type="email" name="email" id="email" placeholder="Ingresa tu email">
     <input type="password" name="password" id="password" placeholder="Ingresa tu password">
     <input type="submit" value="INGRESAR">
 </form>
 
 <h2>INGRESAR CON TU CUENTA DE GITHUB</h2>
-<button onclick="location.href='/users/registroGithub'">GITHUB</button>
+<button onclick="location.href='/registroGithub'">GITHUB</button>
 
 <h2>INGRESA CON TU CUENTA DE GMAIL</h2>
-<button onclick="location.href='/users/registroGoogle'">GMAIL</button>
+<button onclick="location.href='/registroGoogle'">GMAIL</button>
 
 <h2>¿NO ESTAS REGISTRADO?</h2>
 <button onclick="location.href='/registro'">Ir a Registro</button>
