--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,5 +1,5 @@
 <h2>Bienvenido {{email}}</h2>
-<button onclick="location.href='/users/logout'">Log Out</button>
+<button onclick="location.href='/logout'">Log Out</button>
 <div class="card">
     {{#each products.docs}}
     <article class="card__product">
