--- a/src/views/registro.handlebars
+++ b/src/views/registro.handlebars
@@ -1,5 +1,5 @@
 <h1>FORMULARIO DE REGISTRO</h1>
-<form action="/users/registro" method="post">
+<form action="/registro" method="post">
     <input type="text" name="first_name" id="first_name" placeholder="Ingresa tu nombre">
     <input type="text" name="last_name" id="last_name" placeholder="Ingresa tu apellido">
     <input type="email" name="email" id="email" placeholder="Ingresa tu email">
